# DRF_schedule_4_coach

./: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
core/: settings.py  urls.py
schedule_api/: models.py  serializers.py  tests.py  urls.py  views.py
schedule_api/migrations/: 0001_initial.py  0002_remove_training_training_time_training_start_time_and_more.py
